--- a/CollegeProject/Cart/CartController.xib
+++ b/CollegeProject/Cart/CartController.xib
@@ -1,13 +1,18 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CartController" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CartController" customModule="CollegeProject" customModuleProvider="target">
             <connections>
+                <outlet property="cartProductTableView" destination="gX2-r5-Bo9" id="YMa-e7-dQO"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -15,8 +20,119 @@
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="gX2-r5-Bo9">
+                    <rect key="frame" x="0.0" y="20" width="375" height="400"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="400" id="B8v-eW-o7m"/>
+                    </constraints>
+                </tableView>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0Wb-bD-wBZ">
+                    <rect key="frame" x="0.0" y="420" width="375" height="247"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="GST" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yKc-Ut-Svh">
+                            <rect key="frame" x="20" y="10" width="100" height="30"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="30" id="Pqo-Yn-7OM"/>
+                                <constraint firstAttribute="width" constant="100" id="ghY-k5-ztd"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10000" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Yn-AC-UcX">
+                            <rect key="frame" x="170" y="10" width="100" height="30"/>
+                            <constraints>
+                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="AY8-eG-khd"/>
+                                <constraint firstAttribute="height" constant="30" id="TQI-aw-Agy"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Delivery" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iLg-VA-FZg">
+                            <rect key="frame" x="20" y="50" width="100" height="30"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="30" id="DWb-Iz-TUw"/>
+                                <constraint firstAttribute="width" constant="100" id="Nuj-Pa-YmH"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2000" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MJn-FA-Ddb">
+                            <rect key="frame" x="170" y="50" width="100" height="30"/>
+                            <constraints>
+                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="42T-fb-5b0"/>
+                                <constraint firstAttribute="height" constant="30" id="yyr-VL-HN3"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Total" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D4c-bh-PwU">
+                            <rect key="frame" x="20" y="90" width="100" height="30"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="30" id="NeY-Py-EKj"/>
+                                <constraint firstAttribute="width" constant="100" id="Ueh-He-dA9"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10000" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ozq-QG-x0N">
+                            <rect key="frame" x="170" y="90" width="100" height="30"/>
+                            <constraints>
+                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="c7O-CK-Vyo"/>
+                                <constraint firstAttribute="height" constant="30" id="mwK-7V-9X7"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstItem="yKc-Ut-Svh" firstAttribute="leading" secondItem="0Wb-bD-wBZ" secondAttribute="leading" constant="20" id="Gwc-BQ-isW"/>
+                        <constraint firstItem="D4c-bh-PwU" firstAttribute="top" secondItem="iLg-VA-FZg" secondAttribute="bottom" constant="10" id="JQB-YM-0JF"/>
+                        <constraint firstItem="D4c-bh-PwU" firstAttribute="leading" secondItem="0Wb-bD-wBZ" secondAttribute="leading" constant="20" id="OO2-kh-IyU"/>
+                        <constraint firstItem="MJn-FA-Ddb" firstAttribute="top" secondItem="4Yn-AC-UcX" secondAttribute="bottom" constant="10" id="Qor-In-N33"/>
+                        <constraint firstItem="iLg-VA-FZg" firstAttribute="leading" secondItem="0Wb-bD-wBZ" secondAttribute="leading" constant="20" id="WVY-Ac-pzM"/>
+                        <constraint firstItem="MJn-FA-Ddb" firstAttribute="leading" secondItem="iLg-VA-FZg" secondAttribute="trailing" constant="50" id="XqF-6K-2x2"/>
+                        <constraint firstItem="yKc-Ut-Svh" firstAttribute="top" secondItem="0Wb-bD-wBZ" secondAttribute="top" constant="10" id="d6V-fp-LNt"/>
+                        <constraint firstItem="ozq-QG-x0N" firstAttribute="top" secondItem="MJn-FA-Ddb" secondAttribute="bottom" constant="10" id="f7J-Xu-DBg"/>
+                        <constraint firstItem="ozq-QG-x0N" firstAttribute="leading" secondItem="D4c-bh-PwU" secondAttribute="trailing" constant="50" id="fyY-Fs-eDC"/>
+                        <constraint firstItem="iLg-VA-FZg" firstAttribute="top" secondItem="yKc-Ut-Svh" secondAttribute="bottom" constant="10" id="if2-ab-jtm"/>
+                        <constraint firstItem="4Yn-AC-UcX" firstAttribute="top" secondItem="0Wb-bD-wBZ" secondAttribute="top" constant="10" id="slk-7b-9gp"/>
+                        <constraint firstItem="4Yn-AC-UcX" firstAttribute="leading" secondItem="yKc-Ut-Svh" secondAttribute="trailing" constant="50" id="tUe-7L-xaJ"/>
+                    </constraints>
+                </view>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8s8-WL-y7c">
+                    <rect key="frame" x="0.0" y="570" width="375" height="97"/>
+                    <color key="backgroundColor" red="0.20000000000000001" green="0.40000000000000002" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                    <state key="normal" title="Checkout">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </state>
+                </button>
+            </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="0Wb-bD-wBZ" firstAttribute="top" secondItem="gX2-r5-Bo9" secondAttribute="bottom" id="3bB-Ck-LrZ"/>
+                <constraint firstItem="gX2-r5-Bo9" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="8Me-kQ-X9e"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="0Wb-bD-wBZ" secondAttribute="trailing" id="V4x-qL-gkO"/>
+                <constraint firstItem="8s8-WL-y7c" firstAttribute="bottom" secondItem="fnl-2z-Ty3" secondAttribute="bottom" id="Vn3-l3-fXL"/>
+                <constraint firstItem="8s8-WL-y7c" firstAttribute="top" secondItem="gX2-r5-Bo9" secondAttribute="bottom" constant="150" id="aWU-Fw-mP5"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="0Wb-bD-wBZ" secondAttribute="bottom" id="bFp-jD-Ula"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="gX2-r5-Bo9" secondAttribute="trailing" id="baA-YT-V3d"/>
+                <constraint firstItem="8s8-WL-y7c" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="cRF-Dw-dIb"/>
+                <constraint firstItem="0Wb-bD-wBZ" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="eNG-81-AVd"/>
+                <constraint firstItem="gX2-r5-Bo9" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="jaE-FA-4R7"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="8s8-WL-y7c" secondAttribute="trailing" id="xW1-hE-caZ"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <point key="canvasLocation" x="53.600000000000001" y="61.619190404797607"/>
         </view>
     </objects>
 </document>
