--- a/CollegeProject/Cart/CartController.xib
+++ b/CollegeProject/Cart/CartController.xib
@@ -22,28 +22,23 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="gX2-r5-Bo9">
-                    <rect key="frame" x="0.0" y="20" width="375" height="390"/>
+                    <rect key="frame" x="0.0" y="20" width="375" height="493"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="390" id="B8v-eW-o7m"/>
+                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="350" id="B8v-eW-o7m"/>
                     </constraints>
                 </tableView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JvI-sN-28J">
-                    <rect key="frame" x="0.0" y="410" width="375" height="4"/>
+                    <rect key="frame" x="0.0" y="513" width="375" height="4"/>
                     <color key="backgroundColor" red="0.20000000000000001" green="0.40000000000000002" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 </view>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CAa-Uq-gNP">
-                    <rect key="frame" x="22" y="20" width="34" height="30"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <state key="normal" title="Back"/>
-                </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WMz-3o-2qJ">
                     <rect key="frame" x="0.0" y="617" width="375" height="50"/>
                     <color key="backgroundColor" red="0.20000000000000001" green="0.40000000000000002" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="50" id="wUN-bN-pHr"/>
+                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="wUN-bN-pHr"/>
                     </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="35"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="30"/>
                     <state key="normal" title="Check Out">
                         <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </state>
@@ -52,30 +47,10 @@
                     </connections>
                 </button>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0Wb-bD-wBZ">
-                    <rect key="frame" x="0.0" y="414" width="375" height="203"/>
+                    <rect key="frame" x="0.0" y="517" width="375" height="100"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="GST" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yKc-Ut-Svh">
-                            <rect key="frame" x="20" y="10" width="100" height="30"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="30" id="Pqo-Yn-7OM"/>
-                                <constraint firstAttribute="width" constant="100" id="ghY-k5-ztd"/>
-                            </constraints>
-                            <fontDescription key="fontDescription" type="system" pointSize="24"/>
-                            <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10000" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Yn-AC-UcX">
-                            <rect key="frame" x="170" y="10" width="100" height="30"/>
-                            <constraints>
-                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="AY8-eG-khd"/>
-                                <constraint firstAttribute="height" constant="30" id="TQI-aw-Agy"/>
-                            </constraints>
-                            <fontDescription key="fontDescription" type="system" pointSize="24"/>
-                            <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Delivery" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iLg-VA-FZg">
-                            <rect key="frame" x="20" y="50" width="100" height="30"/>
+                            <rect key="frame" x="70" y="10" width="100" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="30" id="DWb-Iz-TUw"/>
                                 <constraint firstAttribute="width" constant="100" id="Nuj-Pa-YmH"/>
@@ -85,7 +60,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2000" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MJn-FA-Ddb">
-                            <rect key="frame" x="170" y="50" width="100" height="30"/>
+                            <rect key="frame" x="220" y="10" width="100" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="42T-fb-5b0"/>
                                 <constraint firstAttribute="height" constant="30" id="yyr-VL-HN3"/>
@@ -95,7 +70,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Total" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D4c-bh-PwU">
-                            <rect key="frame" x="20" y="90" width="100" height="30"/>
+                            <rect key="frame" x="70" y="50" width="100" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="30" id="NeY-Py-EKj"/>
                                 <constraint firstAttribute="width" constant="100" id="Ueh-He-dA9"/>
@@ -105,7 +80,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10000" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ozq-QG-x0N">
-                            <rect key="frame" x="170" y="90" width="100" height="30"/>
+                            <rect key="frame" x="220" y="50" width="100" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="c7O-CK-Vyo"/>
                                 <constraint firstAttribute="height" constant="30" id="mwK-7V-9X7"/>
@@ -117,18 +92,15 @@
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstItem="yKc-Ut-Svh" firstAttribute="leading" secondItem="0Wb-bD-wBZ" secondAttribute="leading" constant="20" id="Gwc-BQ-isW"/>
+                        <constraint firstItem="MJn-FA-Ddb" firstAttribute="top" secondItem="0Wb-bD-wBZ" secondAttribute="top" constant="10" id="4JL-Dr-nV6"/>
                         <constraint firstItem="D4c-bh-PwU" firstAttribute="top" secondItem="iLg-VA-FZg" secondAttribute="bottom" constant="10" id="JQB-YM-0JF"/>
-                        <constraint firstItem="D4c-bh-PwU" firstAttribute="leading" secondItem="0Wb-bD-wBZ" secondAttribute="leading" constant="20" id="OO2-kh-IyU"/>
-                        <constraint firstItem="MJn-FA-Ddb" firstAttribute="top" secondItem="4Yn-AC-UcX" secondAttribute="bottom" constant="10" id="Qor-In-N33"/>
-                        <constraint firstItem="iLg-VA-FZg" firstAttribute="leading" secondItem="0Wb-bD-wBZ" secondAttribute="leading" constant="20" id="WVY-Ac-pzM"/>
+                        <constraint firstItem="D4c-bh-PwU" firstAttribute="leading" secondItem="0Wb-bD-wBZ" secondAttribute="leading" constant="70" id="OO2-kh-IyU"/>
+                        <constraint firstItem="iLg-VA-FZg" firstAttribute="leading" secondItem="0Wb-bD-wBZ" secondAttribute="leading" constant="70" id="WVY-Ac-pzM"/>
                         <constraint firstItem="MJn-FA-Ddb" firstAttribute="leading" secondItem="iLg-VA-FZg" secondAttribute="trailing" constant="50" id="XqF-6K-2x2"/>
-                        <constraint firstItem="yKc-Ut-Svh" firstAttribute="top" secondItem="0Wb-bD-wBZ" secondAttribute="top" constant="10" id="d6V-fp-LNt"/>
                         <constraint firstItem="ozq-QG-x0N" firstAttribute="top" secondItem="MJn-FA-Ddb" secondAttribute="bottom" constant="10" id="f7J-Xu-DBg"/>
                         <constraint firstItem="ozq-QG-x0N" firstAttribute="leading" secondItem="D4c-bh-PwU" secondAttribute="trailing" constant="50" id="fyY-Fs-eDC"/>
-                        <constraint firstItem="iLg-VA-FZg" firstAttribute="top" secondItem="yKc-Ut-Svh" secondAttribute="bottom" constant="10" id="if2-ab-jtm"/>
-                        <constraint firstItem="4Yn-AC-UcX" firstAttribute="top" secondItem="0Wb-bD-wBZ" secondAttribute="top" constant="10" id="slk-7b-9gp"/>
-                        <constraint firstItem="4Yn-AC-UcX" firstAttribute="leading" secondItem="yKc-Ut-Svh" secondAttribute="trailing" constant="50" id="tUe-7L-xaJ"/>
+                        <constraint firstAttribute="height" constant="100" id="sHR-qY-TNO"/>
+                        <constraint firstItem="iLg-VA-FZg" firstAttribute="top" secondItem="0Wb-bD-wBZ" secondAttribute="top" constant="10" id="z6g-qY-7A5"/>
                     </constraints>
                 </view>
             </subviews>
@@ -145,7 +117,6 @@
                 <constraint firstItem="0Wb-bD-wBZ" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="eNG-81-AVd"/>
                 <constraint firstItem="gX2-r5-Bo9" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="jaE-FA-4R7"/>
                 <constraint firstItem="WMz-3o-2qJ" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="k4M-7b-yCa"/>
-                <constraint firstItem="0Wb-bD-wBZ" firstAttribute="bottom" secondItem="fnl-2z-Ty3" secondAttribute="bottom" constant="-50" id="m2F-Oe-JBX"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="JvI-sN-28J" secondAttribute="trailing" id="oGQ-Oo-7cb"/>
                 <constraint firstItem="JvI-sN-28J" firstAttribute="top" secondItem="gX2-r5-Bo9" secondAttribute="bottom" id="yGa-D2-Chx"/>
                 <constraint firstItem="0Wb-bD-wBZ" firstAttribute="top" secondItem="JvI-sN-28J" secondAttribute="bottom" id="zY6-er-rWs"/>
